--- a/plutus-tx-plugin/plutus-tx-plugin.cabal
+++ b/plutus-tx-plugin/plutus-tx-plugin.cabal
@@ -1,4 +1,4 @@
-cabal-version: 2.2
+cabal-version: 3.0
 name: plutus-tx-plugin
 version: 0.1.0.0
 license: Apache-2.0
@@ -59,6 +59,7 @@ library
         ghc >=8.10 && <9,
         ghc-prim -any,
         plutus-core -any,
+        plutus-core:common -any,
         lens -any,
         mtl -any,
         prettyprinter -any,
@@ -95,6 +96,8 @@ test-suite plutus-tx-tests
         deepseq -any,
         integer-gmp -any,
         plutus-core -any,
+        plutus-core:common -any,
+        plutus-core:testlib -any,
         plutus-tx -any,
         plutus-tx-plugin -any,
         prettyprinter -any,
