--- a/plutus-tx/plutus-tx.cabal
+++ b/plutus-tx/plutus-tx.cabal
@@ -1,4 +1,4 @@
-cabal-version: 2.2
+cabal-version: 3.0
 name: plutus-tx
 version: 0.1.0.0
 license: Apache-2.0
@@ -85,6 +85,7 @@ library
         containers -any,
         flat -any,
         plutus-core -any,
+        plutus-core:common -any,
         lens -any,
         ghc-prim -any,
         aeson -any
