Experiments in AST analysis

--- a/plutus-core/plutus-core.cabal
+++ b/plutus-core/plutus-core.cabal
@@ -438,6 +438,7 @@ executable uplc
         plutus-core -any,
         base <5,
         bytestring -any,
+        containers -any,
         deepseq -any,
         flat -any,
         monoidal-containers -any,
