--- a/marlowe-dashboard-server/marlowe-dashboard-server.cabal
+++ b/marlowe-dashboard-server/marlowe-dashboard-server.cabal
@@ -28,6 +28,7 @@ library
         base >=4.7 && <5,
         http-client -any,
         http-client-tls -any,
+        marlowe -any,
         monad-logger -any,
         mtl -any,
         playground-common -any,
@@ -58,6 +59,7 @@ executable marlowe-dashboard-server
         http-client-tls -any,
         http-types -any,
         lens -any,
+        marlowe -any,
         marlowe-dashboard-server -any,
         monad-logger -any,
         mtl -any,
