PR #3722 Changes to support the partial tx format

--- a/plutus-contract/plutus-contract.cabal
+++ b/plutus-contract/plutus-contract.cabal
@@ -144,7 +144,8 @@ library
         streaming -any,
         IntervalMap -any,
         plutus-chain-index -any,
-        plutus-core -any
+        plutus-core -any,
+        cardano-crypto-class -any
 
     if !(impl(ghcjs) || os(ghcjs))
         build-depends: plutus-tx-plugin -any
