New let float pass using PIR.freevars
Forgot to recurse the removeLets inside the rhs bindings

WIP: separated depth and scope reader

WIP: fixed remaining bugs

NewLetFloat: fixed accumulating letholes, fixed depth-calc of mark

Fixed floatBack to recurse inside the floated-lets rhs'es

Don't store the Recursivity for LetHoles

NewLetFloat: when calculating freevars look into bindings' types

--- a/plutus-core/plutus-core.cabal
+++ b/plutus-core/plutus-core.cabal
@@ -132,7 +132,7 @@ library
         PlutusIR.Transform.Beta
         PlutusIR.Transform.DeadCode
         PlutusIR.Transform.Inline
-        PlutusIR.Transform.LetFloat
+        PlutusIR.Transform.NewLetFloat
         PlutusIR.Transform.LetMerge
         PlutusIR.Transform.RecSplit
         PlutusIR.Transform.NonStrict
@@ -291,7 +291,6 @@ library
         mmorph -any,
         monoidal-containers,
         mtl -any,
-        nonempty-containers -any,
         parser-combinators >= 0.4.0,
         prettyprinter >=1.1.0.1,
         prettyprinter-configurable -any,
