--- a/plutus-core/plutus-core.cabal
+++ b/plutus-core/plutus-core.cabal
@@ -281,6 +281,7 @@ library
         hashable,
         hedgehog >=1.0,
         integer-gmp -any,
+        index-envs -any,
         lazy-search -any,
         lens -any,
         megaparsec -any,
